unpackaged/main/default/objects/OrderApi__Badge__c/OrderApi__Badge__c.object-meta.xml
<CustomObject>
    <description>Badges are assigned to Contacts either automatically (Badge Workflow) or manually. Badges can enable Contacts for special Price Rules - as well as permission to read, update, or delete certain content types.</description>
    <label>Badge</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Badge ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Badges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>