unpackaged/main/default/objects/OrderApi__Badge__c/fields/OrderApi__Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the assigned Account.</description>
    <inlineHelpText>Link to the assigned Account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Badges</relationshipLabel>
    <relationshipName>Badges</relationshipName>
    <type>Lookup</type>
</CustomField>