unpackaged/main/default/objects/OrderApi__Badge__c/fields/OrderApi__Assignment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Badges can be auto-assigned to Contacts based on &quot;Assignment&quot; the link to the &quot;Assignment&quot; record is used to auto-unassign the badge when the Contact has been &quot;Unassigned&quot;.</description>
    <inlineHelpText>** System Calculated ** Badges can be auto-assigned to Contacts based on &quot;Assignment&quot; the link to the &quot;Assignment&quot; record is used to auto-unassign the badge when the Contact has been &quot;Unassigned&quot;.</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>OrderApi__Assignment__c</referenceTo>
    <relationshipLabel>Badges</relationshipLabel>
    <relationshipName>Badges</relationshipName>
    <type>Lookup</type>
</CustomField>