unpackaged/main/default/objects/OrderApi__Badge__c/fields/OrderApi__Awarded_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Awarded_Date__c</fullName>
    <description>** System Calculated Required Override ** The date the Badge Type was assigned to the Contact. Defaults to today&#39;s date if no other value provided on record creation.</description>
    <inlineHelpText>** System Calculated Required Override ** The date the Badge Type was assigned to the Contact. Defaults to today&#39;s date if no other value provided on record creation.</inlineHelpText>
    <label>Awarded Date</label>
    <type>Date</type>
</CustomField>