unpackaged/main/default/objects/OrderApi__Badge__c/fields/OrderApi__Badge_Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Badge_Description__c</fullName>
    <description>** System Calculated ** Value of the &quot;Short Description&quot; field for the linked Badge Type.</description>
    <formula>OrderApi__Badge_Type__r.OrderApi__Short_Description__c</formula>
    <inlineHelpText>** System Calculated ** Value of the &quot;Short Description&quot; field for the linked Badge Type.</inlineHelpText>
    <label>Badge Description</label>
    <type>Text</type>
</CustomField>