unpackaged/main/default/objects/OrderApi__Badge__c/fields/OrderApi__Badge_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Badge_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Badge Type</label>
    <referenceTo>OrderApi__Badge_Type__c</referenceTo>
    <relationshipLabel>Badges</relationshipLabel>
    <relationshipName>Badges</relationshipName>
    <type>Lookup</type>
</CustomField>