unpackaged/main/default/objects/OrderApi__Badge__c/fields/OrderApi__Badge_Type_Icon__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Badge_Type_Icon__c</fullName>
    <description>** System Calculated ** Icon with link anchored by the Badge Type Name to the Badge Type assigned to the Contact.</description>
    <formula>IF(OrderApi__Badge_Type__c != null, OrderApi__Badge_Type__r.OrderApi__Icon__c, &quot;Image Not Available&quot;) &amp; &quot; &quot; &amp; HYPERLINK(LEFT($Api.Enterprise_Server_URL_410 , FIND(&#39;/services&#39;, $Api.Enterprise_Server_URL_410)) &amp; Id, OrderApi__Badge_Type__r.Name, &quot;_tab&quot;)</formula>
    <inlineHelpText>** System Calculated ** Icon with link anchored by the Badge Type Name to the Badge Type assigned to the Contact.</inlineHelpText>
    <label>Badge</label>
    <type>Text</type>
</CustomField>