unpackaged/main/default/objects/OrderApi__Badge__c/fields/OrderApi__Badge_Workflow__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Badge_Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to related Badge Workflow that auto-assigned the Badge Type to the Contact.</description>
    <inlineHelpText>** System Calculated ** Link to related Badge Workflow that auto-assigned the Badge Type to the Contact.</inlineHelpText>
    <label>Badge Workflow</label>
    <referenceTo>OrderApi__Badge_Workflow__c</referenceTo>
    <relationshipLabel>Assigned Badges</relationshipLabel>
    <relationshipName>Badges</relationshipName>
    <type>Lookup</type>
</CustomField>