unpackaged/main/default/objects/OrderApi__Badge__c/fields/OrderApi__Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Engagement_Score__c</fullName>
    <description>The numerical engagement score assigned for receiving the badge.</description>
    <inlineHelpText>The numerical engagement score assigned for receiving the badge.</inlineHelpText>
    <label>Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>