unpackaged/main/default/objects/OrderApi__Badge__c/fields/OrderApi__Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Expired_Date__c</fullName>
    <description>** System Calculated ** The date the Badge Type was un-assigned from the Contact.</description>
    <inlineHelpText>** System Calculated ** The date the Badge Type was un-assigned from the Contact.</inlineHelpText>
    <label>Expired Date</label>
    <type>Date</type>
</CustomField>