unpackaged/main/default/objects/OrderApi__Badge__c/fields/OrderApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the Badge is considered &quot;Awarded&quot; and &quot;Active&quot; and will be considered when calculating any permission or pricing configurations related to the linked Badge Type. Defaults checked.</description>
    <inlineHelpText>When checked, the Badge is considered &quot;Awarded&quot; and &quot;Active&quot; and will be considered when calculating any permission or pricing configurations related to the linked Badge Type. Defaults checked.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>