unpackaged/main/default/objects/OrderApi__Badge__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to related Item that was related to the Assignment or the Sales Order Line that invoked the workflow that auto-assigned the Badge Type to the Contact.</description>
    <inlineHelpText>** System Calculated ** Link to related Item that was related to the Assignment or the Sales Order Line that invoked the workflow that auto-assigned the Badge Type to the Contact.</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Badges (DO NOT DISPLAY)</relationshipLabel>
    <relationshipName>Badges</relationshipName>
    <type>Lookup</type>
</CustomField>