unpackaged/main/default/objects/OrderApi__Badge__c/fields/OrderApi__Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to related Sales Order Line that invoked the workflow that auto-assigned the Badge Type to the Contact.</description>
    <inlineHelpText>** System Calculated ** Link to related Sales Order Line that invoked the workflow that auto-assigned the Badge Type to the Contact.</inlineHelpText>
    <label>Sales Order Line</label>
    <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Badges</relationshipLabel>
    <relationshipName>Badges</relationshipName>
    <type>Lookup</type>
</CustomField>