unpackaged/main/default/objects/OrderApi__Badge__c/fields/OrderApi__Term__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Term of the Badge.</description>
    <inlineHelpText>Associated Term of the Badge.</inlineHelpText>
    <label>RESERVED</label>
    <referenceTo>OrderApi__Renewal__c</referenceTo>
    <relationshipLabel>Badges</relationshipLabel>
    <relationshipName>Badges</relationshipName>
    <type>Lookup</type>
</CustomField>